--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luxe Events - Premier Event Center</title>
+    <title>Iceland Civic Centre - Premier Event Center</title>
     <meta name="description" content="Transform your special moments into unforgettable experiences at Luxe Events - the premier event center for weddings, corporate events, and celebrations." />
     <meta name="author" content="Luxe Events" />
 
