--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Iceland Civic Centre - Premier Event Center</title>
-    <meta name="description" content="Transform your special moments into unforgettable experiences at Luxe Events - the premier event center for weddings, corporate events, and celebrations." />
+    <meta name="description" content="Transform your special moments into unforgettable experiences at Iceland Civic Centre - the premier event center for weddings, corporate events, and celebrations." />
     <meta name="author" content="Luxe Events" />
 
-    <meta property="og:title" content="Luxe Events - Premier Event Center" />
-    <meta property="og:description" content="Transform your special moments into unforgettable experiences at Luxe Events - the premier event center for weddings, corporate events, and celebrations." />
+    <meta property="og:title" content="Iceland Civic Centre - Premier Event Center" />
+    <meta property="og:description" content="Transform your special moments into unforgettable experiences at Iceland Civic Centre - the premier event center for weddings, corporate events, and celebrations." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
